--- a/www/index.html
+++ b/www/index.html
@@ -15,18 +15,28 @@
 </head>
 
 <body>
-    <div class="app">
+    <div class="app2">
         <h1>PhoneGap</h1>
-        <div id="deviceready" class="blink">
-            <p class="event listening">Connecting to Device</p>
-            <p class="event received">Device is Ready</p>
-        </div>
+        
 		<button onclick="window.plugins.insomnia.keepAwake()">keep awake</button>
 		<button onclick="window.plugins.insomnia.allowSleepAgain()">allow sleep again</button>
-		<button onClick="ativar_back();">ATIVAR BACK</button>
-		<button onClick="vericar_ativo();">vericar ativo</button>
+		
     </div>
-	
+	<div class="app">
+            <h1>Background Plugin</h1>
+            <div id="deviceready" class="blink">
+                <p class="event listening">Connecting to Device</p>
+                <p class="event received">Device is Ready</p>
+            </div>
+            <div class="container">
+                <a id="silent" href="#" class="button grey"><span>✓</span>Silent mode</a>
+                <a id="mode" href="#" class="button orange"><span>✓</span>Background</a>
+            </div>
+        </div>
+        <div class="copyright">
+            © 2017 appPlant<br/>
+            Made with <g-emoji alias="yum" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f60b.png">😋</g-emoji> from Leipzig
+        </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
