--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,10 @@
             <p class="event received">Device is Ready</p>
         </div>
 		<button onClick="teste_not();">TESTE 01</button>
-		<button onClick="showBottom();">TESTE 02</button>
+		<button onClick="teste_not2();">TESTE 02</button>
+		<button onclick="window.plugins.toast.showShortTop('Hello there!', function(a){console.log('toast success: ' + a)}, function(b){alert('toast error: ' + b)})">Toast showShortTop</button>
+<button onclick="window.plugins.toast.showLongBottom('Hello there!', function(a){console.log('toast success: ' + a)}, function(b){alert('toast error: ' + b)})">Toast showLongBottom</button>
+<button onclick="window.plugins.toast.show('Hello there!', 'long', 'center', function(a){console.log('toast success: ' + a)}, function(b){alert('toast error: ' + b)})">Toast show long center</button>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
