--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
         </div>
 		<button onClick="teste_not();">TESTE 01</button>
 		<button onClick="teste_not2();">TESTE 02</button>
+		<button onClick="teste_not3();">TESTE 03</button>
 		<button onclick="window.plugins.toast.showShortTop('Hello there!', function(a){console.log('toast success: ' + a)}, function(b){alert('toast error: ' + b)})">Toast showShortTop</button>
 <button onclick="window.plugins.toast.showLongBottom('Hello there!', function(a){console.log('toast success: ' + a)}, function(b){alert('toast error: ' + b)})">Toast showLongBottom</button>
 <button onclick="window.plugins.toast.show('Hello there!', 'long', 'center', function(a){console.log('toast success: ' + a)}, function(b){alert('toast error: ' + b)})">Toast show long center</button>
